RESOLVED FIXED167548
[GTK] ASSERTION FAILED: !m_layerTreeHost in DrawingAreaImpl::display()
https://bugs.webkit.org/show_bug.cgi?id=167548
Summary [GTK] ASSERTION FAILED: !m_layerTreeHost in DrawingAreaImpl::display()
Carlos Garcia Campos
Reported 2017-01-28 02:23:15 PST
The problem is that non accelerated compositing forceRepaint implementation is doing a layout and then calling display. The layout makes the drawing area enter in AC mode and display asserts that we have a layer tree host. forceRepaint shouldn't do the layout because display already does that and it correctly handles the case of entering AC mode during the layout. It shouldn't call setNeedsDisplay either, because that schedules a display, but we are going to display synchronously.
Attachments
Patch (1.88 KB, patch)
2017-01-28 02:25 PST, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2017-01-28 02:25:11 PST
Carlos Garcia Campos
Comment 2 2017-01-28 23:15:44 PST
Note You need to log in before you can comment on or make changes to this bug.